fix: refactor and output single line for font styling

--- a/css/tokens.css
+++ b/css/tokens.css
@@ -1,93 +1,93 @@
 /**
  * Do not edit directly
- * Generated on Tue, 01 Nov 2022 18:41:04 GMT
+ * Generated on Tue, 08 Nov 2022 13:24:02 GMT
  */
 
 :root {
-  --colour-brand-default: #0081A2;
-  --colour-brand-dark: #005072;
-  --colour-brand-light: #C8EEFA;
-  --colour-interactive-default: #0070C4;
-  --colour-interactive-hover: #004F84;
-  --colour-interactive-error: #EC040B;
-  --colour-interactive-focus: #FEBA35;
-  --colour-text-default: #333333;
-  --colour-text-secondary: #666666;
-  --colour-text-light: #FFFFFF;
-  --colour-status-info-default: #005DAA;
-  --colour-status-info-light: #B2D4ED;
-  --colour-status-info-dark: #00347A;
-  --colour-status-warning-default: #FEBA35;
-  --colour-status-warning-light: #FCEFD0;
-  --colour-status-warning-dark: #C68A00;
-  --colour-status-emergency-default: #EC040B;
-  --colour-status-emergency-light: #FFCECF;
-  --colour-status-emergency-dark: #B00000;
-  --colour-status-success-default: #00853F;
-  --colour-status-success-light: #C6E0D0;
-  --colour-status-success-dark: #005715;
-  --colour-greyscale-100: #F1F1F1;
-  --colour-greyscale-200: #DCDCDC;
-  --colour-greyscale-400: #ADADAD;
-  --colour-greyscale-500: #949494;
-  --colour-greyscale-600: #666666;
-  --colour-greyscale-black: #333333;
-  --colour-greyscale-white: #FFFFFF;
-  --font-weight-regular: 400;
-  --font-weight-medium: 500;
-  --font-weight-bold: 700;
-  --font-size-1: 0.75rem;
-  --font-size-2: 0.875rem;
-  --font-size-3: 1rem;
-  --font-size-4: 1.125rem;
-  --font-size-5: 1.25rem;
-  --font-size-6: 1.375rem;
-  --font-size-7: 1.5rem;
-  --font-size-8: 2rem;
-  --font-size-9: 2.25rem;
-  --font-size-10: 3rem;
-  --spacing-none: 0rem;
-  --spacing-3xs: 0.125rem;
-  --spacing-2xs: 0.25rem;
-  --spacing-xs: 0.5rem;
-  --spacing-s: 0.75rem;
-  --spacing-m: 1rem;
-  --spacing-l: 1.5rem;
-  --spacing-xl: 2rem;
-  --spacing-2xl: 3rem;
-  --spacing-3xl: 4rem;
-  --spacing-4xl: 8rem;
-  --border-radius-0: 0;
-  --border-radius-4: 4;
-  --border-radius-pill: 999px;
-  --border-radius-circle: 50%;
-  --opacity-3: 30%;
-  --opacity-5: 50%;
-  --opacity-8: 80%;
-  --line-height-1: 1.25rem;
-  --line-height-2: 1.5rem;
-  --line-height-3: 1.75rem;
-  --line-height-4: 2rem;
-  --line-height-5: 2.5rem;
-  --line-height-6: 2.75rem;
-  --line-height-7: 3.5rem;
-  --font-families-default: Acumin-pro-semi-condensed;
-  --font-families-numbers: roboto-mono;
-  --typography-heading-xl: [object Object];
-  --typography-heading-l: [object Object];
-  --typography-heading-m: [object Object];
-  --typography-heading-s: [object Object];
-  --typography-heading-xs: [object Object];
-  --typography-body-l: [object Object];
-  --typography-body-m: [object Object];
-  --typography-body-s: [object Object];
-  --typography-body-xs: [object Object];
-  --typography-button-default: [object Object];
-  --border-width-s: 1;
-  --border-width-m: 2;
-  --border-width-l: 3;
-  --letter-spacing-buttons: 1%;
-  --icon-size-s: 1rem;
-  --icon-size-m: 1.25rem;
-  --icon-size-l: 1.5rem;
+  --goa-colour-brand-default: #0081A2;
+  --goa-colour-brand-dark: #005072;
+  --goa-colour-brand-light: #C8EEFA;
+  --goa-colour-interactive-default: #0070C4;
+  --goa-colour-interactive-hover: #004F84;
+  --goa-colour-interactive-error: #EC040B;
+  --goa-colour-interactive-focus: #FEBA35;
+  --goa-colour-text-default: #333333;
+  --goa-colour-text-secondary: #666666;
+  --goa-colour-text-light: #FFFFFF;
+  --goa-colour-status-info-default: #005DAA;
+  --goa-colour-status-info-light: #B2D4ED;
+  --goa-colour-status-info-dark: #00347A;
+  --goa-colour-status-warning-default: #FEBA35;
+  --goa-colour-status-warning-light: #FCEFD0;
+  --goa-colour-status-warning-dark: #C68A00;
+  --goa-colour-status-emergency-default: #EC040B;
+  --goa-colour-status-emergency-light: #FFCECF;
+  --goa-colour-status-emergency-dark: #B00000;
+  --goa-colour-status-success-default: #00853F;
+  --goa-colour-status-success-light: #C6E0D0;
+  --goa-colour-status-success-dark: #005715;
+  --goa-colour-greyscale-100: #F1F1F1;
+  --goa-colour-greyscale-200: #DCDCDC;
+  --goa-colour-greyscale-400: #ADADAD;
+  --goa-colour-greyscale-500: #949494;
+  --goa-colour-greyscale-600: #666666;
+  --goa-colour-greyscale-black: #333333;
+  --goa-colour-greyscale-white: #FFFFFF;
+  --goa-font-weight-regular: 400;
+  --goa-font-weight-medium: 500;
+  --goa-font-weight-bold: 700;
+  --goa-font-size-1: 0.75rem;
+  --goa-font-size-2: 0.875rem;
+  --goa-font-size-3: 1rem;
+  --goa-font-size-4: 1.125rem;
+  --goa-font-size-5: 1.25rem;
+  --goa-font-size-6: 1.375rem;
+  --goa-font-size-7: 1.5rem;
+  --goa-font-size-8: 2rem;
+  --goa-font-size-9: 2.25rem;
+  --goa-font-size-10: 3rem;
+  --goa-spacing-none: 0rem;
+  --goa-spacing-3xs: 0.125rem;
+  --goa-spacing-2xs: 0.25rem;
+  --goa-spacing-xs: 0.5rem;
+  --goa-spacing-s: 0.75rem;
+  --goa-spacing-m: 1rem;
+  --goa-spacing-l: 1.5rem;
+  --goa-spacing-xl: 2rem;
+  --goa-spacing-2xl: 3rem;
+  --goa-spacing-3xl: 4rem;
+  --goa-spacing-4xl: 8rem;
+  --goa-border-radius-0: 0;
+  --goa-border-radius-4: 4;
+  --goa-border-radius-pill: 999px;
+  --goa-border-radius-circle: 50%;
+  --goa-opacity-3: 30%;
+  --goa-opacity-5: 50%;
+  --goa-opacity-8: 80%;
+  --goa-line-height-1: 1.25rem;
+  --goa-line-height-2: 1.5rem;
+  --goa-line-height-3: 1.75rem;
+  --goa-line-height-4: 2rem;
+  --goa-line-height-5: 2.5rem;
+  --goa-line-height-6: 2.75rem;
+  --goa-line-height-7: 3.5rem;
+  --goa-font-families-default: Acumin-pro-semi-condensed;
+  --goa-font-families-numbers: roboto-mono;
+  --goa-typography-heading-xl: 700 3rem/3.5rem Acumin-pro-semi-condensed;
+  --goa-typography-heading-l: 400 2.25rem/2.75rem Acumin-pro-semi-condensed;
+  --goa-typography-heading-m: 400 1.5rem/2rem Acumin-pro-semi-condensed;
+  --goa-typography-heading-s: 700 1.125rem/1.75rem Acumin-pro-semi-condensed;
+  --goa-typography-heading-xs: 700 1rem/1.5rem Acumin-pro-semi-condensed;
+  --goa-typography-body-l: 400 1.5rem/2rem Acumin-pro-semi-condensed;
+  --goa-typography-body-m: 400 1.125rem/1.75rem Acumin-pro-semi-condensed;
+  --goa-typography-body-s: 400 1rem/1.5rem Acumin-pro-semi-condensed;
+  --goa-typography-body-xs: 400 0.875rem/1.25rem Acumin-pro-semi-condensed;
+  --goa-typography-button-default: 400 1.125rem/1.25rem Acumin-pro-semi-condensed;
+  --goa-border-width-s: 1;
+  --goa-border-width-m: 2;
+  --goa-border-width-l: 3;
+  --goa-letter-spacing-buttons: 1%;
+  --goa-icon-size-s: 1rem;
+  --goa-icon-size-m: 1.25rem;
+  --goa-icon-size-l: 1.5rem;
 }
