--- a/css/tokens.css
+++ b/css/tokens.css
@@ -1,38 +1,60 @@
 /**
  * Do not edit directly
- * Generated on Tue, 08 Nov 2022 13:24:02 GMT
+ * Generated on Tue, 08 Nov 2022 19:41:02 GMT
  */
 
 :root {
-  --goa-colour-brand-default: #0081A2;
-  --goa-colour-brand-dark: #005072;
-  --goa-colour-brand-light: #C8EEFA;
-  --goa-colour-interactive-default: #0070C4;
-  --goa-colour-interactive-hover: #004F84;
-  --goa-colour-interactive-error: #EC040B;
-  --goa-colour-interactive-focus: #FEBA35;
-  --goa-colour-text-default: #333333;
-  --goa-colour-text-secondary: #666666;
-  --goa-colour-text-light: #FFFFFF;
-  --goa-colour-status-info-default: #005DAA;
-  --goa-colour-status-info-light: #B2D4ED;
-  --goa-colour-status-info-dark: #00347A;
-  --goa-colour-status-warning-default: #FEBA35;
-  --goa-colour-status-warning-light: #FCEFD0;
-  --goa-colour-status-warning-dark: #C68A00;
-  --goa-colour-status-emergency-default: #EC040B;
-  --goa-colour-status-emergency-light: #FFCECF;
-  --goa-colour-status-emergency-dark: #B00000;
-  --goa-colour-status-success-default: #00853F;
-  --goa-colour-status-success-light: #C6E0D0;
-  --goa-colour-status-success-dark: #005715;
-  --goa-colour-greyscale-100: #F1F1F1;
-  --goa-colour-greyscale-200: #DCDCDC;
-  --goa-colour-greyscale-400: #ADADAD;
-  --goa-colour-greyscale-500: #949494;
-  --goa-colour-greyscale-600: #666666;
-  --goa-colour-greyscale-black: #333333;
-  --goa-colour-greyscale-white: #FFFFFF;
+  --goa-information-background-colour: #f1f1f1;
+  --goa-information-text-colour: #005daa;
+  --goa-information-icon-colour: #005daa;
+  --goa-font-family: Acumin-pro-semi-condensed;
+  --goa-font-size: 0.875rem;
+  --goa-font-weight: 400;
+  --goa-important-background-colour: #feba35;
+  --goa-important-text-colour: #333333;
+  --goa-important-icon-colour: #333333;
+  --goa-padding-left: 0.5rem;
+  --goa-padding-right: 0.5rem;
+  --goa-padding-top: 0.25rem;
+  --goa-padding-bottom: 0.25rem;
+  --goa-icon-size: 1rem;
+  --goa-emergency-background-colour: #ec040b;
+  --goa-emergency-text-colour: #ffffff;
+  --goa-emergency-icon-colour: #ffffff;
+  --goa-success-background-colour: #00853f;
+  --goa-success-text-colour: #ffffff;
+  --goa-success-icon-colour: #ffffff;
+  --goa-space-between: 0.25rem;
+  --goa-border-radius: 0.25rem;
+  --goa-color-brand-default: #0081a2;
+  --goa-color-brand-dark: #005072;
+  --goa-color-brand-light: #c8eefa;
+  --goa-color-interactive-default: #0070c4;
+  --goa-color-interactive-hover: #004f84;
+  --goa-color-interactive-error: #ec040b;
+  --goa-color-interactive-focus: #feba35;
+  --goa-color-text-default: #333333;
+  --goa-color-text-secondary: #666666;
+  --goa-color-text-light: #ffffff;
+  --goa-color-status-info-default: #005daa;
+  --goa-color-status-info-light: #b2d4ed;
+  --goa-color-status-info-dark: #00347a;
+  --goa-color-status-warning-default: #feba35;
+  --goa-color-status-warning-light: #fcefd0;
+  --goa-color-status-warning-dark: #c68a00;
+  --goa-color-status-emergency-default: #ec040b;
+  --goa-color-status-emergency-light: #ffcecf;
+  --goa-color-status-emergency-dark: #b00000;
+  --goa-color-status-success-default: #00853f;
+  --goa-color-status-success-light: #c6e0d0;
+  --goa-color-status-success-dark: #005715;
+  --goa-color-greyscale-100: #f1f1f1;
+  --goa-color-greyscale-200: #dcdcdc;
+  --goa-color-greyscale-400: #adadad;
+  --goa-color-greyscale-500: #949494;
+  --goa-color-greyscale-600: #666666;
+  --goa-color-greyscale-black: #333333;
+  --goa-color-greyscale-white: #ffffff;
   --goa-font-weight-regular: 400;
   --goa-font-weight-medium: 500;
   --goa-font-weight-bold: 700;
@@ -57,8 +79,8 @@
   --goa-spacing-2xl: 3rem;
   --goa-spacing-3xl: 4rem;
   --goa-spacing-4xl: 8rem;
-  --goa-border-radius-0: 0;
-  --goa-border-radius-4: 4;
+  --goa-border-radius-0: 0rem;
+  --goa-border-radius-4: 0.25rem;
   --goa-border-radius-pill: 999px;
   --goa-border-radius-circle: 50%;
   --goa-opacity-3: 30%;
@@ -83,9 +105,9 @@
   --goa-typography-body-s: 400 1rem/1.5rem Acumin-pro-semi-condensed;
   --goa-typography-body-xs: 400 0.875rem/1.25rem Acumin-pro-semi-condensed;
   --goa-typography-button-default: 400 1.125rem/1.25rem Acumin-pro-semi-condensed;
-  --goa-border-width-s: 1;
-  --goa-border-width-m: 2;
-  --goa-border-width-l: 3;
+  --goa-border-width-s: 1px;
+  --goa-border-width-m: 2px;
+  --goa-border-width-l: 3px;
   --goa-letter-spacing-buttons: 1%;
   --goa-icon-size-s: 1rem;
   --goa-icon-size-m: 1.25rem;
