fix: use US color spelling

--- a/scss/tokens.scss
+++ b/scss/tokens.scss
@@ -1,27 +1,27 @@
 
 // Do not edit directly
-// Generated on Tue, 08 Nov 2022 19:41:02 GMT
+// Generated on Tue, 08 Nov 2022 20:47:17 GMT
 
-$goa-information-background-colour: #f1f1f1;
-$goa-information-text-colour: #005daa;
-$goa-information-icon-colour: #005daa;
+$goa-information-background-color: #f1f1f1;
+$goa-information-text-color: #005daa;
+$goa-information-icon-color: #005daa;
 $goa-font-family: Acumin-pro-semi-condensed;
 $goa-font-size: 0.875rem;
 $goa-font-weight: 400;
-$goa-important-background-colour: #feba35;
-$goa-important-text-colour: #333333;
-$goa-important-icon-colour: #333333;
+$goa-important-background-color: #feba35;
+$goa-important-text-color: #333333;
+$goa-important-icon-color: #333333;
 $goa-padding-left: 0.5rem;
 $goa-padding-right: 0.5rem;
 $goa-padding-top: 0.25rem;
 $goa-padding-bottom: 0.25rem;
 $goa-icon-size: 1rem;
-$goa-emergency-background-colour: #ec040b;
-$goa-emergency-text-colour: #ffffff;
-$goa-emergency-icon-colour: #ffffff;
+$goa-emergency-background-color: #ec040b;
+$goa-emergency-text-color: #ffffff;
+$goa-emergency-icon-color: #ffffff;
 $goa-success-background-colour: #00853f;
-$goa-success-text-colour: #ffffff;
-$goa-success-icon-colour: #ffffff;
+$goa-success-text-color: #ffffff;
+$goa-success-icon-color: #ffffff;
 $goa-space-between: 0.25rem;
 $goa-border-radius: 0.25rem;
 $goa-color-brand-default: #0081a2;
@@ -106,7 +106,7 @@ $goa-typography-button-default: 400 1.125rem/1.25rem Acumin-pro-semi-condensed;
 $goa-border-width-s: 1px;
 $goa-border-width-m: 2px;
 $goa-border-width-l: 3px;
-$goa-letter-spacing-buttons: 1%;
+$goa-letter-spacing-1: 1%;
 $goa-icon-size-s: 1rem;
 $goa-icon-size-m: 1.25rem;
 $goa-icon-size-l: 1.5rem;
